demos/Gateway demo/gateway.yaml
# this works because istio has been installed sidecar mode by downloading istio and install manually.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    hostname: localhost
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  parentRefs:
  - name: api-gateway
  hostnames:
  - "localhost"
  - "abc.com"
  - "www.abc.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /nginx
    filters:
      - type: URLRewrite
        urlRewrite:
          hostname: localhost
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: nginx-service
      port: 8080
  # - matches:
  #   - path:
  #       type: PathPrefix
  #       value: /watch
  #   - type: ResponseHeaderModifier
  #     responseHeaderModifier:
  #       add:
  #       - name: Access-Control-Allow-Origin
  #         value: "*"
  #       - name: Access-Control-Allow-Methods
  #         value: "GET, POST, PUT, DELETE, OPTIONS"
  #       - name: Access-Control-Allow-Headers
  #         value: "Content-Type, Authorization"
  #       - name: Access-Control-Allow-Credentials
  #         value: "true"
  #       - name: Access-Control-Max-Age
  #         value: "3600"
  #   backendRefs:
  #   - name: watch-svc-v1
  #     port: 8080
  #     weight: 50
  #   - name: watch-svc-v2
  #     port: 8080
  #     weight: 50
